# SkinSure

./: .gitignore  CLAUDE.md  README.md  ham10k_img_proc.ipynb  img_proc.ipynb  img_proc2.ipynb  ipd1.ipynb  pyproject.toml
api/schemas/: patient.py  predictions.py
configs/: agents.yaml  models.yaml
docs/: ROADMAP.md  architecture.md
skinsure.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/agents/: clinical_summarizer.py
src/models/: CLAUDE.md  convnext.py  convnext_tiny_5class.ipynb  efficientnet.py  efficientnet_b1_5class.ipynb  ensemble.py  ensemble_evaluation.ipynb  swin.py  swin_tiny_5class.ipynb
src/preprocessing/: inference_transform.py
src/utils/: config.py
