[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skinsure"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "timm",
    "pillow",
    "numpy",
    "opencv-python",
    "anthropic",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*"]